--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .principal{
-    background-color: #f5f5f5;
+    /* Atualizado para a nova cor de fundo clara */
+    background-color: #fafcd3;
     padding: 20px;
     min-height: 100vh;
-
 }
