--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,9 @@ a:hover {
   color: #535bf2;
 }
 
+/* Este arquivo pode ser simplificado ou removido se globals.css e o Tema MUI cuidarem de tudo */
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
